--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -155,14 +155,14 @@
     >
       <h1 class="fw-bold text text-center text-danger py-4">Gallery</h1>
 
-      <div class="col-md-6 col-sm-12 mb-3">
+      <!-- <div class="col-md-6 col-sm-12 mb-3">
         <img
           src="images/g1.jpg"
           alt="images"
           class="img-fluid"
           style="max-height: 512px; width: 100%"
         />
-      </div>
+      </div> -->
 
       <div class="col-md-6 col-sm-12 mb-3">
         <div class="row">
@@ -263,7 +263,7 @@
             <p>Privacy Policy</p>
           </div>
           <div class="col-md-4">
-            <h4>Connect with Us</h4>
+            <h4>Instagram</h4>
             <p><a href="#" class="text-black">Facebook</a></p>
             <p><a href="#" class="text-black">Twitter</a></p>
             <p><a href="#" class="text-black">Instagram</a></p>
