--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -122,7 +122,7 @@
       class="row mt-5 text-center d-flex justify-content-center"
       id="portfolioSection"
     >
-      <h1 class="fw-bold text text-danger">Portfolio</h1>
+      <h1 class="fw-bold text text-danger"></h1>
       <!-- Portfolio content will be populated by JavaScript -->
     </section>
 
@@ -240,15 +240,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-sm-12 mb-3">
-        <img
-          src="images/g10.jpg"
-          alt="images"
-          class="img-fluid"
-          style="max-height: 512px; width: 100%"
-        />
-      </div>
     </section>
+
+    <!-- removed unnecessary image div -->
 
     <!-- Footer Section -->
     <!-- Footer Section -->
