--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -48,6 +48,9 @@
                 <a href="#" class="nav-link text-dark">Home</a>
               </li>
               <li class="nav-item">
+                <a href="#" class="nav-link text-dark">CART</a>
+              </li>
+              <li class="nav-item">
                 <a href="#" class="nav-link text-dark">About</a>
               </li>
               <li class="nav-item">
@@ -70,7 +73,7 @@
             class="form-control rounded-pill bg-transparent justify-content-end"
             type="text"
             id="searchBar"
-            placeholder="Search..."
+            placeholder="Search your Deals.."
           />
         </div>
       </nav>
